--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <head>
     <title>Sorry Not Sorry</title>
     <script src="popup.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
     <h1>Sorry Not Sorry</h1>
